# db_attrs

./: .buildinfo  .gitignore  DbClass.py  README.md  __init__.py  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  seriattrs.db_classes.html  seriattrs.db_fields.html  seriattrs.html  setup.cfg
.doctrees/: environment.pickle  index.doctree  modules.doctree  seriattrs.db_classes.doctree  seriattrs.db_fields.doctree  seriattrs.doctree
JsonEncoder/: Decoder.py  Encoder.py  JsonOperator.py
JsonEncoder/Decoders/: DecimalDecoder.py  __init__.py
JsonEncoder/Encoders/: DecimalEncoder.py
_sources/: index.rst.txt  modules.rst.txt  seriattrs.db_fields.rst.txt
docs/: conf.py  index.rst  modules.rst  seriattrs.db_classes.rst  seriattrs.rst
src/: DbClass.py  ImplementingFromDict.py  __init__.py
src/JsonEncoder/: Decoder.py  Encoder.py  __init__.py
src/db_class_integrator.egg-info/: PKG-INFO  SOURCES.txt
src/db_classes/: DbClass.py  DbClassLiteral.py  DbClassMetaclass.py  __init__.py
src/seriattrs/: DbClass.py  DbClassCreator.py  DbClassLiteral.py  __init__.py
test/: tests.py  tests_serialization.py
test/db_types/: db_types.py  ints.py  summed_up.py  test_char.py  test_ints.py  test_summed_up.py  test_uints.py  test_varchar.py  uints.py  varchar.py
test/test_circular_dependency/: Ala.py  Cat.py  test_circular_dependency.py
test/test_circular_dependency_literal/: Ala.py  Cat.py  test_circular_dependency_literal.py
test/test_circular_dependency_not_literal/: Ala.py  Cat.py  test_circular_dependency_not_literal.py
(+29 files in other folders)
