[metadata]
name = db-classes
version = 1.0.0
author = Tesla2000
author_email = fratajczak124@gmail.com
description = Highly serializable implementation of dataclass ment to work with databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tesla2000/db_attrs
project_urls =
    Homepage = https://github.com/Tesla2000/db_attrs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    cattrs>=23.2.3
    attrs>=23.1.0

[options.packages.find]
where = src